--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.ing</groupId>
     <artifactId>car-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
@@ -23,14 +23,13 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>${spring.version}</version>
         </dependency>
-<!--
+
 
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
             <artifactId>de.flapdoodle.embed.mongo</artifactId>
             <version>2.2.0</version>
         </dependency>
--->
 
 
         <dependency>
