--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
 #spring.data.mongodb.database=BookStore
 
 spring.data.mongodb.database=carappdb
-#spring.data.mongodb.port=50741
+spring.data.mongodb.port=50741
+
 spring.data.mongodb.repositories.type=auto
 server.servlet.context-path=/api/
